Fixed heart not covering album art in fullscreen

--- a/src/Stylings/Views.scss
+++ b/src/Stylings/Views.scss
@@ -347,7 +347,7 @@ body:has(.Root__main-view-overlay .BeautifulLyricsPage:is(.Fullscreen)) {
 		.control-button-heart {
 			--radius: 10vh;
 
-			display: block;
+			display: flex;
 
 			width: 40vh;
 			height: 40vh;
